# online-shopping

./: .env  .gitignore  Cargo.toml  README.md  electricCommerceDown.sql  electricCommerceUp.sql  package-lock.json
front_end/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.js
front_end/src/: App.vue  main.js
front_end/src/api/: file.js  product.js  purchase.js  search.js  store.js  user.js
front_end/src/assets/: base.scss  main.scss
front_end/src/components/: AvatarModule.vue  CommodityItem.vue  CommodityList.vue  CoverUpload.vue  DataList.vue  DialogModule.vue  NoData.vue  ShoppingCartItem.vue
front_end/src/mock/: mockServer.js
front_end/src/router/: index.js
front_end/src/stores/: counter.js  purchaseList.js  userInfo.js
front_end/src/utils/: message.js  request.js  tools.js
front_end/src/views/: AccountView.vue  HomeView.vue  LoginAndRegister.vue
front_end/src/views/commodity/: CommodityDetail.vue
front_end/src/views/product/: ProductDetail.vue  ProductItem.vue  ProductList.vue
front_end/src/views/purchase/: PurchaseListItem.vue  PurchaseView.vue
front_end/src/views/store/: ProductEditor.vue  StoreDetail.vue  StoreEditor.vue
front_end/src/views/user/: OrderList.vue  ShoppingCart.vue  ShoppingCartItem.vue  StoreItem.vue  StoreList.vue  UserCenter.vue
images/store_cover/: 1
migrations/2023-06-12-144948_shopping_migration/: down.sql  up.sql
migrations/2023-06-24-052211_change_for_buy/: down.sql  up.sql
migrations/2023-06-25-153018_orders_change/: down.sql  up.sql
migrations/2023-06-26-060525_add_name_in_order/: down.sql  up.sql
migrations/2023-06-27-135658_delete_product/: down.sql  up.sql
src/: account_handlers.rs  error_return.rs  file_handlers.rs  handlers.rs  inserts.rs  lib.rs  main.rs  model.rs  models.rs  product_handlers.rs  purchase_handlers.rs  requests.rs  responses.rs  schema.rs  search_handlers.rs  store_handlers.rs
